--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "supervisor ./bin/www"
+    "dev": "supervisor ./bin/www",
+    "artisani": "node ./data/install"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -14,6 +15,8 @@
     "express": "~4.16.1",
     "express-session": "^1.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongoose": "^5.5.9",
+    "morgan": "~1.9.1",
+    "mysql": "^2.17.1"
   }
 }
